<resources>
    <string name="app_name">Benchmarks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_collection">Please enter collection size and number of elements to compare</string>
    <string name="collection_size">Collection size</string>
    <string name="calculate">Calculate</string>
    <string name="start">Start</string>
    <string name="elements_amount">Elements amount:</string>
    <string name="average_execution_time">%s %s %s ms</string>
    <string name="collections_title">Collections</string>
    <string name="maps_title">Maps</string>
    <string name="stop">Stop</string>
    <string name="dialog_title">Input validate</string>
    <string name="dialog_message">Collection size is must be in range 1 000 000 – 10 000 000</string>
    <string name="confirm">Confirm</string>
</resources>