<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tv_enter_collection_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="21dp"
        android:text="@string/enter_collection"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_enter_collection_size"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:hint="@string/collection_size"
        android:textColorHint="@color/gray"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enter_collection_size"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins_medium"
            android:inputType="number"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view_space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_calculate"
        style="@style/GlobalButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/calculate"
        android:background="@drawable/button_background"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="39dp"
        app:backgroundTint="@null"/>

</LinearLayout>